# HRMS

./: .gitignore
.github/workflows/: build-and-push.yml  reusable-build-push.yml  service-config.json  setup-kubernetes.yml
ansible/playbooks/: 01-prepare-nodes.yml  02-setup-master.yml  03-setup-workers.yml  04-deploy-hrms.yml  05-configure-ecr-access.yml  05-setup-ecr-refresh.yml
ansible/scripts/: README.md  refresh-ecr-secrets.sh
k8s-manifests/frontend/: deployment.yaml
services/: README.md  docker-compose.yml  init.sql
services/audit-service/: Dockerfile  pyproject.toml
services/audit-service/app/: main.py
services/audit-service/app/api/: __init__.py  deps.py
services/audit-service/app/api/routes/: __init__.py  auth.py  employees.py
services/audit-service/app/consumers/: __init__.py  audit_consumer.py
services/audit-service/app/core/: config.py  database.py
services/audit-service/app/models/: __init__.py  employee.py
services/audit-service/app/schemas/: __init__.py  employee.py
services/user-management-service/: FILE_GUIDE.txt  pyproject.toml
services/user-management-service/app/: main.py
services/user-management-service/app/api/: __init__.py  auth.py  dependencies.py  users.py
services/user-management-service/app/core/: asgardeo.py  config.py  integrations.py  logging.py  security.py
services/user-management-service/app/models/: __init__.py  users.py
terraform/: .terraform.lock.hcl  backend.tf  bootstrap_tf_backend.sh  ecr.tf  main.tf  nlb.tf  outputs.tf  secrets.tf  security_groups.tf  user_data.sh  variables.tf
(+164 files in other folders)
